# wrum

./: .gitignore  README.md
Playground/HelloNgon/: App.cpp  App.hpp  CMakeLists.txt  Polygon.hpp  app.cpp  app.hpp  main.cpp
Playground/HelloNgon/shaders/: sh_f.glsl  sh_v.glsl
Playground/HelloTriangle/: App.cpp  CMakeLists.txt  main.cc  main.cpp  plg.cc  plg.cpp  wrum
Playground/Ngon/: App.cpp  App.hpp  CMakeLists.txt  Keyboard.hpp  Polygon.hpp  main.cpp
Playground/Ngon/shaders/: sh_f.glsl  sh_v.glsl
include/wrum/: Attrib.hpp  Buffer.hpp  Compiler.hpp  Exception.hpp  Field.hpp  FunkyArray.hpp  GPURef.hpp  Prim.hpp  Program.hpp  Shader.hpp  VertexBuffer.hpp  main.cc
